nullaway_error_F66F8273-9CDB-4227-A4F2-537A7E8AFEAB.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-jms/src/main/java/org/springframework/jms/listener/SimpleMessageListenerContainer.java:328: error: [NullAway] dereferenced expression this.taskExecutor is @Nullable
			consumer.setMessageListener(message -> this.taskExecutor.execute(() -> processMessage(message, session)));
			                                                        ^
    (see http://t.uber.com/nullaway )
